--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   height: 100px;
   text-align: center;
   background-color: DodgerBlue;
-  top: -25px;
+  top: -22px;
   left: 180px;
   z-index: -1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -71,6 +71,13 @@ body {
   border: none;
   border-radius: 5px 0 0 5px;
   color: rgba(0, 0, 0, 0.8);
+}
+.input-box select {
+  opacity: 0.8;
+  border: none;
+  color: rgba(0, 0, 0, 0.8);
+  direction: rtl;
+  padding: 0 20px 0 5px;
 }
 .btn-add {
   background-color: #2ecc40;
