--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ body {
 .to-do-list {
   list-style: none;
   text-align: center;
+  perspective: 100px;
 }
 .to-do-list li {
   height: 50px;
@@ -150,8 +151,15 @@ body {
   border-radius: 35px;
   margin-top: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   position: relative;
+  opacity: 0;
+  transform: rotateX(-90deg);
+  transition: all 0.5s cubic-bezier(0.36, -0.64, 0.34, 1.76);
+}
+.to-do-list li.show {
+  opacity: 1;
+  transform: none;
+  transition: all 0.5s cubic-bezier(0.36, -0.64, 0.34, 1.76);
 }
 .to-do-list sup {
   font-size: 12px;
